virt01/manual/torrent/deluge/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
      annotations:
        backup.velero.io/backup-volumes-excludes: torrent
        backup.velero.io/backup-volumes: deluge-pv
        # Opts this pod into the pod-gateway webhook (VPN egress routing).
        setGateway: "true"
    spec:
      serviceAccountName: deluge-sa
      restartPolicy: Always 
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8112
              name: deluge-port
              protocol: TCP
          resources:
            requests:
              memory: 1Gi
              cpu: 25m
          volumeMounts:
            - name: deluge-pv
              mountPath: /config
            - name: torrent
              mountPath: /data
            - name: web-config
              mountPath: /config/web.conf.cm
              subPath: web.conf
            - name: core-config
              mountPath: /config/core.conf.cm
              subPath: core.conf
      volumes:
        - name: deluge-pv
          persistentVolumeClaim:
            claimName: deluge-pvc
        - name: torrent
          hostPath:
            type: Directory
            path: /mnt/hdd01/torrent
        - name: web-config
          configMap:
            name: web-conf-cm
        - name: core-config
          configMap:
            name: core-conf-cm
